BREAKING: remove deprecated code