@@ -21,7 +21,6 @@ import io.micronaut.security.config.SecurityConfiguration;
 import io.micronaut.security.token.RolesFinder;
 import jakarta.inject.Singleton;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A security rule implementation backed by the {@link SecurityConfiguration#getInterceptUrlMap()}.
@@ -49,22 +48,9 @@ public class ConfigurationInterceptUrlMapRule extends InterceptUrlMapRule {
                                             SecurityConfiguration securityConfiguration,
                                             InterceptUrlPatternModifier interceptUrlPatternModifier) {
         super(rolesFinder);
-        this.patternList = securityConfiguration.getInterceptUrlMap() == null ? null :
-            securityConfiguration.getInterceptUrlMap().stream()
+        this.patternList = securityConfiguration.getInterceptUrlMap().stream()
             .map(interceptUrlPatternModifier::modify)
-            .collect(Collectors.toList());
-    }
-
-    /**
-     *
-     * @param rolesFinder Roles Parser
-     * @param securityConfiguration The Security Configuration
-     * @deprecated Use {@link ConfigurationInterceptUrlMapRule(RolesFinder,SecurityConfiguration,InterceptUrlPatternModifier)} instead.
-     */
-    @Deprecated
-    public ConfigurationInterceptUrlMapRule(RolesFinder rolesFinder,
-                                            SecurityConfiguration securityConfiguration) {
-        this(rolesFinder, securityConfiguration, interceptUrlMapPattern -> interceptUrlMapPattern);
+            .toList();
     }
 
     @Override
